--- a/Scoop.Service/App.config
+++ b/Scoop.Service/App.config
@@ -8,6 +8,7 @@
   </startup>
   <!-- Internal settings. These are locked on application start. -->
   <appSettings>
+    <add key="BackgroundTask.AutoUpdate.Enabled" value="true" />
     <add key="BackgroundTask.AutoUpdate.GitHubRepositoryName" value="Scoop" />
     <add key="BackgroundTask.AutoUpdate.GitHubRepositoryOwner" value="okebai" />
     <add key="BackgroundTask.AutoUpdate.DownloadDirectory" value="updates" />
