--- a/package.json
+++ b/package.json
@@ -4,27 +4,15 @@
   "private": true,
   "devDependencies": {
     "gulp": "^3.9.0",
-    "grunt": "^0.4.5",
-    "bower": "^1.5.3",
+    "bower": "^1.7.2",
+    "del": "^2.2.0",
+    "merge-stream": "^1.0.0",
     "typescript": "^1.6.2",
-    "grunt-timer": "^0.6.0",
-    "grunt-typescript": "^0.7.0",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-uglify": "^0.9.2",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-contrib-less": "^1.0.1",
-    "grunt-contrib-cssmin": "^0.14.0",
     "gulp-less": "^3.0.3",
     "gulp-typescript": "^2.9.2",
-    "gulp-minify-css": "^1.2.1",
-    "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.4.1",
-    "gulp-concat": "^2.6.0",
     "gulp-plumber": "^1.0.1",
     "gulp-usemin": "^0.3.20",
-    "gulp-minify-html": "^1.0.5",
-    "gulp-rev": "^6.0.1",
-    "gulp-clean": "^0.3.1",
-    "merge-stream": "^1.0.0"
+    "gulp-htmlmin": "^1.3.0"
   }
 }
