--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
   "version": "1.0.0",
-  "name": "Scoop",
+  "name": "scoop",
   "private": true,
   "devDependencies": {
-    "gulp": "^3.9.0",
-    "bower": "^1.7.2",
+    "gulp": "^3.9.1",
+    "bower": "^1.7.7",
     "del": "^2.2.0",
     "merge-stream": "^1.0.0",
-    "typescript": "^1.6.2",
+    "typescript": "^1.7.5",
     "gulp-less": "^3.0.3",
-    "gulp-typescript": "^2.9.2",
-    "gulp-uglify": "^1.4.1",
+    "gulp-typescript": "^2.11.0",
+    "gulp-uglify": "^1.5.2",
     "gulp-plumber": "^1.0.1",
     "gulp-usemin": "^0.3.20",
-    "gulp-htmlmin": "^1.3.0"
+    "gulp-htmlmin": "^1.3.0",
+    "gulp-flatten": "^0.2.0",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-foreach": "^0.1.0"
   }
 }
