--- a/Scoop.Server/Scoop.Server.csproj
+++ b/Scoop.Server/Scoop.Server.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Hubs\ServerStatusHub.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SignalRContractResolver.cs" />
     <Compile Include="SignalRHubActivator.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="Tasks\PerformanceTaskListener.cs" />
